wip - refactoring & cleanup